Another attempt on fixing the workflow